Fix spacing between planet and geography images,Replace buttons with nav bar on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,47 +44,54 @@ h3 {
   letter-spacing: 2.6px;
 }
 //Navbar
-
 .nav-bar {
-  max-width: 1600px;
-  margin: 0 auto;
   width: 100%;
   border-bottom: 1px solid #38384f;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #fff;
-  padding: 1em;
-
-  .menu-icon {
-    display: none;
-  }
-  .nav-title {
-    margin: 0;
-  }
-  .nav-menu {
+  .nav-content {
+    max-width: 1600px;
+    margin: 0 auto;
+    //margin-bottom: 1em;
+    width: 100%;
     display: flex;
     align-items: center;
-    gap: 1em;
-    font-family: Spartan;
-    text-transform: uppercase;
+    justify-content: space-between;
+    color: #fff;
+    padding: 1em;
 
-    a {
-      text-decoration: none;
-      color: #fff;
+    .menu-icon {
+      display: none;
+    }
+    .nav-title {
+      margin: 0;
+    }
+    .nav-menu {
+      display: flex;
+      align-items: center;
+      gap: 1em;
+      font-family: Spartan;
+      text-transform: uppercase;
+
+      a {
+        text-decoration: none;
+        color: #fff;
+      }
     }
   }
 }
 //Footer
 footer {
-  max-width: 1600px;
-  margin: 1em auto;
   width: 100%;
-  bottom: 0;
   border-top: 1px solid #38384f;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  .footer-content {
+    max-width: 1600px;
+    margin: 1em auto;
+    padding: 0.5em;
+    width: 100%;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 //Planet Info
@@ -93,7 +100,8 @@ footer {
   max-width: 1600px;
   width: 95%;
   margin: 0 auto;
-
+  margin-top: 2em;
+  margin-bottom: 2em;
   .planet-data {
     display: flex;
     flex-direction: row;
@@ -107,14 +115,14 @@ footer {
       justify-content: center;
       align-items: center;
       //position: relative;
+      transition: all ease 0.5s;
       img {
         transition: all ease 0.5s;
       }
 
       .planet-geology {
-        position: relative;
-        bottom: 20;
-        width: 20%;
+        margin-top: -60px;
+        width: 15%;
       }
     }
     .planet-info {
@@ -127,10 +135,18 @@ footer {
       .button {
         font-family: Spartan;
       }
+      .source {
+        color: #838391;
+        a {
+          text-decoration: none;
+          color: #838391;
+        }
+      }
 
       .planet-overview {
         line-height: 1.5em;
       }
+
       .button-container {
         display: flex;
         flex-direction: column;
@@ -156,6 +172,9 @@ footer {
       }
     }
   }
+  .button-container-mobile {
+    display: none;
+  }
 }
 
 .planet-stats {
@@ -179,7 +198,7 @@ footer {
 }
 
 @media screen and (max-width: 1000px) {
-  .nav-bar {
+  .nav-content {
     flex-direction: column;
     gap: 0.5em;
     margin-bottom: 1em;
@@ -191,7 +210,10 @@ footer {
 
       .img-container {
         img {
-          width: 100%;
+          //width: 100%;
+        }
+        .planet-geology {
+          width: 30%;
         }
       }
       .planet-info {
@@ -212,7 +234,7 @@ footer {
 }
 
 @media screen and (max-width: 600px) {
-  .nav-bar {
+  .nav-content {
     position: relative;
     flex-direction: row;
     justify-content: space-between;
@@ -235,7 +257,7 @@ footer {
       overflow: hidden;
     }
     .menu-icon {
-      display: block;
+      display: block !important;
     }
   }
   .planet-stats {
@@ -247,10 +269,20 @@ footer {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 485px) {
   .planet {
+    margin-top: 0;
     .planet-data {
+      margin-top: 2em;
+      .info-container {
+        .source {
+          text-align: center;
+        }
+      }
       .img-container {
+        .planet-geology {
+          width: 50%;
+        }
         img {
           width: 100%;
         }
@@ -266,6 +298,17 @@ footer {
           }
         }
       }
+    }
+    .button-container {
+      display: none !important;
+    }
+    .button-container-mobile {
+      border-bottom: 1px solid #38384f;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      transition: all 0.5s ease;
     }
   }
 }
